[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-pc-windows-gnu"

[dependencies]
pgn-reader = "0.25.0"
reqwest = "0.11.20"
tokio = { version = "1", features = ["full"] }
